2001-12-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.c: replaced use of GConfEngine with GConfClient to
	avoid problems with GConfEngine/GConfClient (from libgnome) mix
	problems

2001-12-08  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-data-model.c (gda_config_set_column_title): new function, since
	the column titles will be managed by the abstract class
	(gda_data_model_get_column_title): implemented
	(gda_data_model_thaw): implemented

	* gda-config.c (gda_config_get_data_source_model): new function,
	to get the list of installed data sources as a GdaDataModel

2001-12-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-client.c (gda_client_get_connection_list): new function
	(gda_client_find_connection): new function

2001-12-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.c (gda_config_get_component_list): add the created
	structures to the list to be returned

	* gda-server.c (component_destroyed_cb): break the for loop when
	we find the item
	(gda_server_class_init): actually create the object class signals

2001-11-30  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-provider.c (gda_server_provider_open_connection):
	added support for the POOLING parameter included in the connection
	string, so that clients not using the client library (python, perl,
	etc) have access to the connection pooling feature

	* gda-server-connection.[ch] (gda_server_connection_get_string): new
	(gda_server_connection_get_username): new function
	(gda_server_connection_get_password): new function

2001-11-24  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server.c (gda_server_register_component): if I use
	"ptype = (GType *) ptype", I'll always get an invalid pointer :-)

2001-11-23  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-client.c (gda_client_open_connection): don't pass NULL
	to ORBit functions

	* gda-xml-document.c:
	* gda-recordset.c: include glib-object.h, not gobject/*.h

	* gda-parameter.[ch] (gda_parameter_new): added a GdaValueType
	parameter
